[package]
name = "zbus-signal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/zbus-server.rs"

[[bin]]
name = "client"
path = "src/zbus-client.rs"

[dependencies]
anyhow = "1.0.82"
async-std = { version = "1.12.0", features = ["attributes"] }
event-listener = "5.3.0"
futures-util = "0.3.30"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
zbus = "4.2.0"
